--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,12 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
+
      <!--   <com.google.android.gms.maps.MapView
             android:id="@+id/mapView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" />-->
-
 
 
         <android.support.v7.widget.Toolbar
@@ -27,6 +27,13 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/sub_title" />
+
+        <TextView
             android:id="@+id/textLoginName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,10 +42,9 @@
     </android.support.design.widget.AppBarLayout>
 
 
- <!--   <include layout="@layout/content_main" />
--->
+    <include layout="@layout/content_main" />
 
-    <include layout="@layout/activity_maps" />
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_log_crime"
